# dilithiumesp32

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
components/common/: CMakeLists.txt  randombytes.c  sp800-185.c
components/dilithium/: CMakeLists.txt  hwmult.c  hwmult.h  multploy.c  multpoly.c  multpoly.h  poly.c  sign.c
components/kyber/: CMakeLists.txt
components/kyber/common/: fips202.c
components/kyber/kyber/: indcpa.c  symmetric-shake.c
main/: idf_component.yml  main.c
scripts/: generate_c_array.py
test_pc/: CMakeLists.txt  main.c
